--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ a:active {
    <tbody bgcolor="#FFFFFF">
      <tr>
        <td><span style="color: #FFFFFF">awdawdawdawd</span><img src="1j+ojVNGOMkX9W2+J1iwiG2pif+CqR5GnQiIiWcqL2VE9ApklyUph...Zr8g==" width="254" height="153" alt=""/></td>
-       <td style="font-size: 50px; color: #FF0004; text-align: center;"><a href="websida.html">Start</a></td>
+       <td style="font-size: 50px; color: #FF0004; text-align: center;"><a href="index.html">Start</a></td>
        <td style="font-size: 50px; color: #FF0004; text-align: center;"><a href="websidanyheter.html">Nyheter</a></td>
        <td style="font-size: 50px; color: #FF0004; text-align: center;"><a href="websidakontakt.html">Kontakta oss</a></td>
 	   <td style="font-size: 50px; color: #FF0004; text-align: center;"><a href="websidashop.html">Shop</a></td>
