--- a/websidanyheter.html
+++ b/websidanyheter.html
@@ -43,10 +43,46 @@ a:hover {
 a:active {
     color: #FF0004;
 }
-    </style>
+.parent {
+display: grid;
+grid-template-columns: repeat(7, 1fr);
+grid-template-rows: repeat(20, 1fr);
+grid-column-gap: 0px;
+grid-row-gap: 0px;
+}
+
+.div1 { grid-area: 1 / 1 / 3 / 8; }
+.div2 { grid-area: 5 / 2 / 11 / 7; }
+.div3 { grid-area: 13 / 2 / 18 / 3; }
+.div4 { grid-area: 13 / 4 / 18 / 5; }
+.div5 { grid-area: 13 / 6 / 15 / 7; }
+.div6 { grid-area: 16 / 6 / 18 / 7; }
+.div7 { grid-area: 19 / 1 / 21 / 8; }
+.div8 { grid-area: 1 / 1 / 3 / 2; }
+.div9 { grid-area: 1 / 2 / 2 / 3; }
+.div10 { grid-area: 1 / 3 / 2 / 4; }
+.div11 { grid-area: 1 / 4 / 2 / 5; }
+.div12 { grid-area: 1 / 6 / 2 / 7; }
+.div13 { grid-area: 1 / 7 / 2 / 8; }
+    </style>  
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body bgcolor="#0024FF">
+  <div class="parent">
+    <div class="div1"> </div>
+    <div class="div2"> </div>
+    <div class="div3"> </div>
+    <div class="div4"> </div>
+    <div class="div5"> </div>
+    <div class="div6"> </div>
+    <div class="div7"> </div>
+    <div class="div8"> </div>
+    <div class="div9"> </div>
+    <div class="div10"> </div>
+    <div class="div11"> </div>
+    <div class="div12"> </div>
+    <div class="div13"> </div>
+    </div>
 
   <h1 style="color: #FF0004">Mamma Hönas Kyckling</h1>
  <table width="100%" border="4" bordercolor=#F8FF00>
