--- a/websidanyheter.html
+++ b/websidanyheter.html
@@ -1,48 +1,15 @@
 <html>
 <head>
-    <title>Mamma Höna</title>
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
+    <title>NSS</title>
+   
     <style>
 		  body {
 
 
     font-size: 36px;
-
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-
-
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  border: 25px solid red;
-  background-color: white;
-  width: 50%;
-}
-
-.centera {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  border: 5px solid yellow;
-  background-color: white;
-  width: 50%;
-}
-
-    a:link {
-    color: #FF0004;
-}
-a:visited {
-    color: #FF0004;
-}
-a:hover {
-    color: #FF3E41;
-}
-a:active {
-    color: #FF0004;
-}
 .parent {
 display: grid;
 grid-template-columns: repeat(7, 1fr);
@@ -51,13 +18,14 @@ grid-column-gap: 0px;
 grid-row-gap: 0px;
 }
 
-.div1 { grid-area: 1 / 1 / 3 / 8; }
-.div2 { grid-area: 5 / 2 / 11 / 7; }
-.div3 { grid-area: 13 / 2 / 18 / 3; }
-.div4 { grid-area: 13 / 4 / 18 / 5; }
-.div5 { grid-area: 13 / 6 / 15 / 7; }
-.div6 { grid-area: 16 / 6 / 18 / 7; }
-.div7 { grid-area: 19 / 1 / 21 / 8; }
+.div1 { grid-area: 1 / 1 / 3 / 8; background-color: #BFE4F4; }
+
+.div2 { grid-area: 5 / 2 / 11 / 7; background-color: #BFE4F4;}
+.div3 { grid-area: 13 / 2 / 18 / 3; background-color: #BFE4F4;}
+.div4 { grid-area: 13 / 4 / 18 / 5; background-color: #BFE4F4;}
+.div5 { grid-area: 13 / 6 / 15 / 7;background-color: #BFE4F4; }
+.div6 { grid-area: 16 / 6 / 18 / 7; background-color: #BFE4F4;}
+.div7 { grid-area: 19 / 1 / 21 / 8; background-color: #BFE4F4;}
 .div8 { grid-area: 1 / 1 / 3 / 2; }
 .div9 { grid-area: 1 / 2 / 2 / 3; }
 .div10 { grid-area: 1 / 3 / 2 / 4; }
@@ -67,47 +35,23 @@ grid-row-gap: 0px;
     </style>  
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
-<body bgcolor="#0024FF">
+
+<body bgcolor="#FFFFFF">
   <div class="parent">
     <div class="div1"> </div>
-    <div class="div2"> </div>
-    <div class="div3"> </div>
-    <div class="div4"> </div>
-    <div class="div5"> </div>
-    <div class="div6"> </div>
-    <div class="div7"> </div>
-    <div class="div8"> </div>
-    <div class="div9"> </div>
-    <div class="div10"> </div>
-    <div class="div11"> </div>
-    <div class="div12"> </div>
-    <div class="div13"> </div>
+    <div class="div2"> kompis</div>
+    <div class="div3"> vad händer</div>
+    <div class="div4"> kuken vänder</div>
+    <div class="div5"> lixom </div>
+    <div class="div6"> lite granna</div>
+    <div class="div7"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2061.4562557675717!2d17.941270816054566!3d58.89023678150737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f5ea05a12739b%3A0x95f7354abfef82c7!2sNyn%C3%A4shamns%20Segels%C3%A4llskap!5e0!3m2!1ssv!2sse!4v1674645100008!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+    <div class="div8">  <img src="nedladdning.jpg" ></div>
+    <div class="div9"> iallafall just nu</div>
+    <div class="div10"> visst äre</div>
+    <div class="div11"> mycket knasigt</div>
+    <div class="div12"> min käre</div>
+    <div class="div13"> vän yo</div>
     </div>
-
-  <h1 style="color: #FF0004">Mamma Hönas Kyckling</h1>
- <table width="100%" border="4" bordercolor=#F8FF00>
-   <tbody bgcolor="#FFFFFF">
-     <tr>
-       <td><span style="color: #FFFFFF">awdawdawdawd</span><img src="1j+ojVNGOMkX9W2+J1iwiG2pif+CqR5GnQiIiWcqL2VE9ApklyUph...Zr8g==" width="254" height="153" alt=""/></td>
-       <td style="font-size: 50px; color: #FF0004; text-align: center;"><a href="index.html">Start</a></td>
-       <td style="font-size: 50px; color: #FF0004; text-align: center;"><a href="websidanyheter.html">Nyheter</a></td>
-       <td style="font-size: 50px; color: #FF0004; text-align: center;"><a href="websidakontakt.html">Kontakta oss</a></td>
-	   <td style="font-size: 50px; color: #FF0004; text-align: center;"><a href="websidashop.html">Shop</a></td>
-       <td><span style="color: #FFFFFF">awdawdawdawd</span><img src="1j+ojVNGOMkX9W2+J1iwiG2pif+CqR5GnQiIiWcqL2VE9ApklyUph...Zr8g==" width="254" height="153" alt=""/></td>
-     </tr>
-   </tbody>
- </table>
-
-<h4 style="font-size: 36px; color: #FF0004;">Bästa kyckling i stada</h4>
-        <p style="font-size: 24px; color: #FF0004;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus in mollis nunc sed id semper. Facilisis gravida neque convallis a cras semper auctor neque. Quis imperdiet massa tincidunt nunc pulvinar sapien et ligula. Tincidunt praesent semper feugiat nibh sed pulvinar. Egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices. Diam in arcu cursus euismod quis viverra nibh cras pulvinar. Sodales ut etiam sit amet nisl purus. Felis bibendum ut tristique et egestas quis ipsum. Convallis tellus id interdum velit laoreet id. Turpis nunc eget lorem dolor sed. Amet luctus venenatis lectus magna fringilla urna porttitor.</p>
-        <br>
-
-
-  <p class="centera" />
-
-	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus in mollis nunc sed id semper. Facilisis gravida neque convallis a cras semper auctor neque. Quis imperdiet massa tincidunt nunc pulvinar sapien et ligula. Tincidunt praesent semper feugiat nibh sed pulvinar. Egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices. Diam in arcu cursus euismod quis viverra nibh cras pulvinar. Sodales ut etiam sit amet nisl purus. Felis bibendum ut tristique et egestas quis ipsum. Convallis tellus id interdum velit laoreet id. Turpis nunc eget lorem dolor sed. Amet luctus venenatis lectus magna fringilla urna porttitor.</p>
-<br>
-            <p style="text-align: center">© The Mamma Höna Company™, All Rights Reserved</p>
 
 </body>
 </html>
