--- a/websidanyheter.html
+++ b/websidanyheter.html
@@ -13,25 +13,26 @@
 .parent {
 display: grid;
 grid-template-columns: repeat(7, 1fr);
-grid-template-rows: repeat(20, 1fr);
+grid-template-rows: repeat(9, 1fr);
 grid-column-gap: 0px;
 grid-row-gap: 0px;
 }
 
-.div1 { grid-area: 1 / 1 / 3 / 8; background-color: #BFE4F4; }
+.div1 { grid-area: 1 / 1 / 1 / 8; background-color: #ffffff; }
 
-.div2 { grid-area: 5 / 2 / 11 / 7; background-color: #BFE4F4;}
-.div3 { grid-area: 13 / 2 / 18 / 3; background-color: #BFE4F4; height == 600;}
-.div4 { grid-area: 13 / 4 / 18 / 5; background-color: #BFE4F4;}
-.div5 { grid-area: 13 / 6 / 15 / 7;background-color: #BFE4F4; }
-.div6 { grid-area: 16 / 6 / 18 / 7; background-color: #BFE4F4;}
-.div7 { grid-area: 19 / 1 / 21 / 8; background-color: #BFE4F4;}
+.div2 { grid-area: 2/ 2 / 3 / 7; background-color: #BFE4F4;}
+.div3 { grid-area: 4 / 2 / 7 / 3; background-color: #BFE4F4; }
+.div4 { grid-area: 4 / 4 / 7 / 5; background-color: #BFE4F4;}
+.div5 { grid-area: 4 / 6 / 6 / 7;background-color: #BFE4F4; }
+.div6 { grid-area: 6 / 6 / 7 / 7; background-color: #BFE4F4;}
+.div7 { grid-area: 9 / 1 / 11 / 8; background-color: #BFE4F4;}
 .div8 { grid-area: 1 / 1 / 3 / 2; }
 .div9 { grid-area: 1 / 2 / 2 / 3; }
 .div10 { grid-area: 1 / 3 / 2 / 4; }
 .div11 { grid-area: 1 / 4 / 2 / 5; }
 .div12 { grid-area: 1 / 6 / 2 / 7; }
 .div13 { grid-area: 1 / 7 / 2 / 8; }
+.div14 { grid-area: 9 / 5/ 11 / 8; }
     </style>  
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
@@ -44,13 +45,14 @@ grid-row-gap: 0px;
     <div class="div4"> kuken vänder</div>
     <div class="div5"> lixom </div>
     <div class="div6"> lite granna</div>
-    <div class="div7"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2061.4562557675717!2d17.941270816054566!3d58.89023678150737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f5ea05a12739b%3A0x95f7354abfef82c7!2sNyn%C3%A4shamns%20Segels%C3%A4llskap!5e0!3m2!1ssv!2sse!4v1674645100008!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+    <div class="div7"> </div>
     <div class="div8">  <img src="nedladdninga.png" ></div>
     <div class="div9"> iallafall just nu</div>
     <div class="div10"> visst äre</div>
     <div class="div11"> mycket knasigt</div>
     <div class="div12"> min käre</div>
     <div class="div13"> vän yo</div>
+    <div class="div14"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2061.4562557675717!2d17.941270816054566!3d58.89023678150737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f5ea05a12739b%3A0x95f7354abfef82c7!2sNyn%C3%A4shamns%20Segels%C3%A4llskap!5e0!3m2!1ssv!2sse!4v1674645100008!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </div>
 
 </body>
