skapat en startsida med viss struktur

--- a/index.html
+++ b/index.html
@@ -1,62 +1,115 @@
-<html>
-<head>
-    <title>Mamma Hönas otroliga kyckling</title>
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
-    <style>
-		  body {
-
-
-    font-size: 36px;
-
-}
-
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  border: 25px solid red;
-
-  width: 50%;
-}
-    a:link {
-    color: #FF0004;
-}
-a:visited {
-    color: #FF0004;
-}
-a:hover {
-    color: #FF3E41;
-}
-a:active {
-    color: #FF0004;
-}
-    </style>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-</head>
-  <body bgcolor="#0024FF">
-
-  <h1 style="color: #FF0004">Mamma Hönas fantastiska Kyckling</h1>
- <table width="100%" border="4" bordercolor=#F8FF00>
-   <tbody bgcolor="#FFFFFF">
-     <tr>
-       <td><span style="color: #FFFFFF">awdawdawdawd</span><img src="1j+ojVNGOMkX9W2+J1iwiG2pif+CqR5GnQiIiWcqL2VE9ApklyUph...Zr8g==" width="254" height="153" alt=""/></td>
-       <td style="font-size: 50px; color: #FF0004; text-align: center;"><a href="index.html">Start</a></td>
-       <td style="font-size: 50px; color: #FF0004; text-align: center;"><a href="websidanyheter.html">Nyheter</a></td>
-       <td style="font-size: 50px; color: #FF0004; text-align: center;"><a href="websidakontakt.html">Kontakta oss</a></td>
-	   <td style="font-size: 50px; color: #FF0004; text-align: center;"><a href="websidashop.html">Shop</a></td>
-       <td><span style="color: #FFFFFF">awdawdawdawd</span><img src="1j+ojVNGOMkX9W2+J1iwiG2pif+CqR5GnQiIiWcqL2VE9ApklyUph...Zr8g==" width="254" height="153" alt=""/></td>
-     </tr>
-   </tbody>
- </table>
-
-<h4 style="font-size: 36px; color: #FF0004;">Bästa kyckling i stada</h4>
-        <p style="font-size: 24px; color: #FF0004;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus in mollis nunc sed id semper. Facilisis gravida neque convallis a cras semper auctor neque. Quis imperdiet massa tincidunt nunc pulvinar sapien et ligula. Tincidunt praesent semper feugiat nibh sed pulvinar. Egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices. Diam in arcu cursus euismod quis viverra nibh cras pulvinar. Sodales ut etiam sit amet nisl purus. Felis bibendum ut tristique et egestas quis ipsum. Convallis tellus id interdum velit laoreet id. Turpis nunc eget lorem dolor sed. Amet luctus venenatis lectus magna fringilla urna porttitor.</p>
-        <br>
-  <a href="websidashop.html"><img src="nedladdning.jpg" width="1100" height="732" class="center" /> </a>
-
-<br>
-            <p style="text-align: center">© The Mamma Höna Company™, All Rights Reserved</p>
-
-  </body>
-</html>
+<div class="Frame">
+  <div class="Feature_List_Left_Default">
+   <div class="Feature_List_Left">
+    <p class="Background"></p>
+    <div class="Content">
+     <div class="Subtitle">Måndag till fredag 08:00-12:00
+ </div>
+     <div class="Title">Öppettider</div>
+     <div class="List">
+      <div class="List_Item">
+       <div class="List_Item_Text">Telefonnummer 08- 520 128 20</div>
+       <p class="Ellipse"></p>
+      </div>
+      <div class="List_Item">
+       <div class="List_Item_Text">Adress Strandvägen 26, 149 34, Nynäshamn</div>
+       <p class="Ellipse"></p>
+      </div>
+     </div>
+    </div>
+   </div>
+   <p class="Skarmavbild_20230116_kl__14_45_1"></p>
+  </div>
+  <div class="Hero_Side_Image_Right">
+   <p class="Background"></p>
+   <div class="Browser">
+    <p class="Background"></p>
+    <p class="Button"></p>
+    <p class="Button"></p>
+    <p class="Button"></p>
+   </div>
+   <div class="Content">
+    <div class="Subtitle">NSS är en aktiv och betydelsefull aktör i Nynäshamn med en naturlig och mångårig verksamhet med inriktning på sjöliv, båtsport, segling och ungdoms- verksamhet.
+ NSS äger en förnämlig klubbanläggning, varv och bryggor vid Fagerviken, många bryggor i Trehörningsviken samt klubbholmen Lacka strax norr om Nynäshamn.</div>
+    <div class="Title">Välkommen till Nynäshamns Segelsällskap</div>
+   </div>
+  </div>
+  <p class="image_2"></p>
+  <div class="Naviation_Left">
+   <p class="Background"></p>
+   <div class="Button_Primary">
+    <p class="Background"></p>
+    <div class="Nyheter">Nyheter</div>
+   </div>
+   <div class="Links">
+    <div class="Webshop">Kläder</div>
+    <div class="Kontakt">Kontakt</div>
+   </div>
+   <div class="Links">
+    <div class="om_klubben">Om Nss</div>
+    <div class="tvlingar">Tävlingar</div>
+    <div class="Avgifter">Avgifter</div>
+    <div class="Fr_Medlemmar">För Medlemmar</div>
+   </div>
+   <div class="Nynshamns_Segelsllskap">NSS</div>
+  </div>
+  <div class="Lokaler">Lokaler</div>
+  <div class="om_klubben">Ungdomsverksamhet</div>
+  <div class="Bli_Medlem">Bli Medlem</div>
+  <div class="Kanot">Kanot</div>
+  <p class="image_1"></p>
+  <div class="Vector_4">
+   <svg>...</svg></div>
+  <p class="image_3"></p>
+  <div class="Naviation_Left">
+   <p class="Background"></p>
+   <div class="Button_Primary">
+    <p class="Background"></p>
+    <div class="Nyheter">Nyheter</div>
+   </div>
+   <div class="Links">
+    <div class="Webshop">Kläder</div>
+    <div class="Kontakt">Kontakt</div>
+   </div>
+   <div class="Links">
+    <div class="om_klubben">Om Nss</div>
+    <div class="tvlingar">Tävlingar</div>
+    <div class="Avgifter">Kanot</div>
+   </div>
+   <div class="Nynshamns_Segelsllskap">NSS</div>
+  </div>
+  <div class="om_klubben">Ungdomsverksamhet</div>
+  <div class="Kanot">För Medlemmar</div>
+  <p class="image_4"></p>
+  <div class="Vector_5">
+   <svg>...</svg></div>
+  <div class="Posts_Blog_Left">
+   <p class="Rectangle"></p>
+   <div class="Blog_Card_Feature">
+    <p class="Background"></p>
+    <div class="Title">Senaste nytt</div>
+   </div>
+   <div class="Blog_Card_Image">
+    <p class="Background"></p>
+    <div class="Title"></div>
+    <div class="Subtitle"></div>
+   </div>
+   <div class="Blog_Card">
+    <p class="Background"></p>
+    <div class="Title"></div>
+    <div class="Subtitle">Annat nytt</div>
+   </div>
+   <div class="Blog_Card">
+    <p class="Background"></p>
+    <div class="Title"></div>
+    <div class="Author"></div>
+    <div class="Subtitle">Annat nytt</div>
+   </div>
+  </div>
+  <div class="Button_Primary">
+   <p class="Background"></p>
+   <div class="Text">Läs mer</div>
+  </div>
+  <div class="Title">Senaste styrelsemötet</div>
+ </div>
+ 
