--- a/websidakontakt.html
+++ b/websidakontakt.html
@@ -22,7 +22,7 @@
 <style>
   /* #TYPOGRAPHY  */
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: rgba(0,0,0,.7);;
   max-width: 1000px;
   margin: 0 auto;
@@ -266,7 +266,7 @@ fade-in {
   <section id="work" class="text-centered">
 
     <div class="thumbgrid">
-      <a href="web-site.html">
+      <a href="">
         <img src="https://res.cloudinary.com/gargiulo/image/upload/v1611877986/placeholder-1x1-hero_v1fq3u.jpg" alt="placeholder" />
       </a>
       <a href="logo.html">
