--- a/webbsidakontaktsparad.html
+++ b/webbsidakontaktsparad.html
@@ -28,17 +28,18 @@
   width: 50%;
 }
 
-    a:link {
+a:link {
     color: #FF0004;
+
 }
 a:visited {
-    color: #FF0004;
+    color: #51ff00;
 }
 a:hover {
-    color: #FF3E41;
+    color: #ffdc3e;
 }
 a:active {
-    color: #FF0004;
+    color: #0051ff;
 }
     </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
