--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html>
+  <meta http-equiv="content-type" content = "text/html" charset = "ISO-8859-1"/>
 <head>
 <style>
 * {
@@ -173,16 +174,8 @@ h2{
     padding-left: 30px;
     
 }
-/* Create three equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 10px;
-  
-}
 
-/* Clear floats after the columns */
-.row:after {
+  .row:after {
   content: "";
   display: table;
   clear: both;
