ny tt upplägg för nyheter

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ body {
 
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media (max-width: 600px) {
+@media (max-width: 100%) {
   .grid-container  {
     grid-template-areas: 
       'header header header header header header' 
@@ -158,7 +158,7 @@ h2{
             
                 <a href="index.html2">Om Oss </a>
                 <a href="index.html2">T&auml;vlingar</a>
-                <a href="index.html2">Kanot</a>
+                <a href="websidanyheter.html">Kanot</a>
                 <a href="index.html2">Ungdomsverksamhet</a> 
             </div>
             
