--- a/websidashop.html
+++ b/websidashop.html
@@ -1,139 +1,47 @@
+
 <!DOCTYPE html>
-<head>
-  <link href='https://fonts.googleapis.com/css?family=Raleway:300,800' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style.css">
-  
-</head>
 <html>
- <style>
- body {
-	font-family: Raleway, sans-serif;
-
-}
-
-h1, h3{
-	color: #000000;
-}
-
-h1 {
+  <style>
+    #page {
+  display: grid;
   width: 100%;
-  font-weight: 300;
-  text-align: center;
-	font-size: 40px;
-
+  height: 250px;
+  grid-template-areas:
+    "head head"
+    "nav  main"
+    "nav  foot";
+  grid-template-rows: 50px 1fr 30px;
+  grid-template-columns: 150px 1fr;
 }
 
-h2 {
-  display: inline-block;
-  text-align: center;
-  padding: 3px 10px;
-  margin: 5px;
-  font-size: 1.75rem;
-  COLOR: rgb(0, 0, 0);
+#page > header {
+  grid-area: head;
+  background-color: #8ca0ff;
 }
 
-.menu {
-  border: 2px solid;
-  text-align: center;
-  width: 200px;
+#page > nav {
+  grid-area: nav;
+  background-color: #ffa08c;
 }
 
-h3 {
-  display: inline-block;
-  font-weight: 800;
-  text-align: left;
-  align-items: left;
-  padding: 10px 25px;
+#page > main {
+  grid-area: main;
+  background-color: #ffff64;
 }
 
-.container {
-  min-width: 775px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+#page > footer {
+  grid-area: foot;
+  background-color: #8cffa0;
 }
 
-.hero {
-
-  background-size: cover;
-  min-width: 964px;
-  min-height: 422px;
-  display: flex;
-  justify-content: right;
-  align-items: right;
-  text-align: left;
+  </style>
   
-  background-color: #BFE4F4;
-  
-}
+  <section id="page"></section>
+    <header>Header</header>
+    <nav>Navigation</nav>
+    <main>Main area</main>
+  <footer>Footer</footer>
+  </section>
 
-.supporting-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 45px 0 0 0;
-}
 
-.supporting-container div {
-  background-size: cover;
-  min-width: 450px;
-  min-height: 345px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 30px;
-}
-
-.upcoming {
-	background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-2/events.jpg');
-}
-
-.roast {
-	background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-2/roast.jpg');
-}
-
-#footer {
-  text-align: center;
-  color: #D6B47E;
-  font-weight: 300;
-  width: 100%;
-  font-size: 1.25rem;
-} </style>
-  <body>
-    <div class="container">
-      <img src="nedladdninga.png" alt="logga" height="75px" align-items="left">
-    <h1>Välkommen Till Nynäshamns Segelsällskap</h1>
-      <div class="hero">
-          <div class="hero-content">
-            <div>
-              <h2>välkommen Till Nynäshamns Segelsällskap</h2>
-            </div>
-            <div>
-              <img src="batomoss.jpg" alt="introduktiongrejs">
-            </div>
-            <div>
-            <h3>NSS är en aktiv och betydelsefull aktör i Nynäshamn<br>
-              med en naturlig och mångårig verksamhet med inriktning på <br>
-              sjöliv, båtsport, segling och ungdoms- verksamhet.<br>
-              NSS äger en förnämlig klubbanläggning, varv och bryggor vid Fagerviken,<br>
-              många bryggor i Trehörningsviken samt klubbholmen Lacka strax norr om Nynäshamn.</h3>
-            </div>
-            <div>
-              
-            </div>
-          </div>
-      </div>
-
-      <div class="supporting-container">
-        <div class="upcoming">
-          <h3>Upcoming events</h3>
-        </div>
-        <div class="roast">
-          <h3>Today's Roast</h3>
-        </div>
-      </div>
-      <p id="footer">Contact Us</p>
-    </div>
-
-  </body>
 </html>
